# Eureka

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  README.md  xmake.lua
Dx12Renderer/: .gitignore  CMakeLists.txt  build.bat  cmake_option.txt  xmake.lua
Dx12Renderer/Dx12lib/: CMakeLists.txt  dx12libStd.cpp  dx12libStd.h  dx12libTest.cc  xmake.lua
Dx12Renderer/Dx12lib/Buffer/: BufferStd.h  CBufferVisitor.hpp  ConstantBuffer.cpp  ConstantBuffer.h  DefaultBuffer.cpp  DefaultBuffer.h  FRConstantBuffer.cpp  FRConstantBuffer.hpp  FRSRStructuredBuffer.cpp  FRSRStructuredBuffer.hpp  IndexBuffer.cpp  IndexBuffer.h  ReadbackBuffer.cpp  ReadbackBuffer.h  SRStructuredBuffer.cpp  SRStructuredBuffer.h  UAStructuredBuffer.cpp  UAStructuredBuffer.h  UploadBuffer.cpp  UploadBuffer.h  VertexBuffer.cpp  VertexBuffer.h
Dx12Renderer/Dx12lib/Common/: Common.h  D3DException.cpp  D3DException.h  Exception.cpp  Exception.h
Dx12Renderer/Dx12lib/Context/: CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  CommonContext.h  ContextProxy.hpp  ContextStd.h  FrameResourceQueue.cpp  FrameResourceQueue.h
Dx12Renderer/Dx12lib/Descriptor/: DescriptorAllocation.cpp  DescriptorAllocation.h  DescriptorAllocator.cpp  DescriptorAllocator.h  DescriptorAllocatorPage.cpp  DescriptorAllocatorPage.h  DescriptorStd.h  DynamicDescriptorHeap.cpp  (+1 more)
Dx12Renderer/Math/: CMakeLists.txt  MathHelper.h  MathStd.hpp  MathTest.cc  MatrixHelper.h  SimpleMath.inl  VectorMember.ini  xmake.lua
Dx12Renderer/RenderGraph/: CMakeLists.txt  RenderGraphStd.h  xmake.lua
EffectCompiler/: CMakeLists.txt  Main.cpp
EffectCompiler/AbstractSyntaxTree/: BaseAST.hpp  CompUnit.hpp  CompUnitAST.hpp  PropertiesDefAST.hpp  PropertyItem.hpp  PropertySet.hpp
EffectCompiler/FlexBison/: EffectParser.l  EffectParser.y
EffectCompiler/Foundation/: Exception.h  PropertyFundation.hpp  PropertyVariant.cpp  PropertyVariant.h
EffectCompiler/Res/: Main.txt
Engine/: CMakeLists.txt  Main.cpp  xmake.lua
Engine/Application/: Application.cpp  Application.h  EurekaApplication.cpp  EurekaApplication.h
Engine/Assets/: Asset.cpp  Asset.h  Mesh.h
Engine/AssimpLoader/: ALMesh.cpp  ALMesh.h  ALNode.cpp  ALNode.h  ALTree.cpp  ALTree.h
Engine/Camera/: Camera.cpp  Camera.h  FPSCameraContorl.cpp  FPSCameraControl.cpp  FPSCameraControl.h
Engine/Comopents/: IComponent.h  Transform.cpp  Transform.h
Engine/Defined/: EngineDefined.h
Engine/EffectLab/: Antlr4Generate.bat  Effect.cpp  Effect.h  EffectCompiler.cpp  EffectCompiler.h  EffectLab.g4  Pass.cpp  Pass.h  PassVariant.cpp  PassVariant.h  PropertyBlock.cpp  PropertyBlock.h  PropertyItem.cpp  PropertyItem.h  ShaderKeyword.cpp  ShaderKeyword.h  ShaderKeywordSet.cpp  ShaderKeywordSet.h
Engine/EngineDefinition/: EngineDefinition.h
Engine/Foundation/: BitFlag.hpp  Exception.h  GameTimer.cpp  Math.h  NamedObject.hpp  NonCopyable.h  Singletion.hpp  UUIDRandomGenerator.cpp  UUIDRandomGenerator.h
Engine/GameTimer/: GameTimer.h
Engine/HlslShader/: ClusterDeferredCS.hlsl  Common.hlsli  CookTorrance.hlsli  DeferredPBR.hlsl  FXAA.hlsl  ForwardPBR.hlsl  ForwardPBRMeta.lua  Lighting.hlsli  LightingPassCS.hlsl  PixelPacking_Velocity.hlsli  PostProcessing.hlsl  ShaderManager.cpp  ShaderManager.h  Shadow.hlsl  SharpenTAACS.hlsl  TAAResolve.hlsl  TAAResolveCS.hlsl  TiledDeferredCS.hlsl  UpdateLightBoundingSphere.hlsl  UpdateLightPositionCS.hlsl
Engine/ITick/: ITick.h
Engine/InputSystem/: InputSystem.cpp  InputSystem.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Window.cpp  Window.h
Engine/Material/: Material.cpp  Material.h
Engine/MaterialSystem/: KeywordMask.cpp  KeywordMask.h  Material.cpp  Material.h  MaterialSystemStd.cpp  MaterialSystemStd.h  Shader.cpp  Shader.h  ShaderDesc.cpp  ShaderDesc.h  ShaderHelper.cpp  ShaderHelper.h  ShaderInclude.cpp  ShaderMeta.cpp  ShaderMeta.h  ShaderVariant.cpp  ShaderVariant.h  StringInclude.h  SubPass.cpp  SubPass.h  SubPassDesc.cpp  SubPassDesc.h  SubPassVariant.cpp  SubPassVariant.h
Engine/Model/: IBound.hpp  IModel.hpp  MeshManager.cpp  MeshManager.h
Engine/Objects/: GameObject.cpp  GameObject.h  Material.cpp  Material.h  MaterialKeyword.cpp  MaterialKeyword.h  MaterialProperty.cpp  MaterialProperty.h  PathManager.cpp  PathManager.h  RenderObject.h  TextureManager.h
Engine/PassDefinition/: ClusterDeferredPass.cpp  ClusterDeferredPass.h  CopyToBackPass.cpp  CopyToBackPass.h  FXAAPass.cpp  FXAAPass.h  GBufferPass.cpp  GBufferPass.h  LightingPass.cpp  LightingPass.h  PostProcessingPass.cpp  PostProcessingPass.h  SetupRenderGraph.cpp  SetupRenderGraph.h  ShadowPass.cpp  ShadowPass.h  TemporalAAPass.cpp  TemporalAAPass.h  TileBased.cpp  TileBased.h  TileDeferredPass.cpp  TileDeferredPass.h
Engine/PathManager/: PathManager.cpp  PathManager.h
Engine/RenderGraph/: RenderGraph.cpp  RenderGraph.h
Engine/RenderGraphDefined/: FXAAPass.cpp  FXAAPass.h  GBufferPass.h  LightingPass.cpp  LightingPass.h  PostProcessingPass.cpp  PostProcessingPass.h  RenderGraphDefined.cpp  RenderGraphDefined.h  TileDererredPass.cpp  TileDererredPass.h
Engine/Rendering/: IRenderPipeline.h
Engine/ShaderHelper/: CBufferStruct.h  ComputePipeline.cpp  ComputePipeline.h  ComputeShader.cpp  ComputeShader.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsShader.cpp  GraphicsShader.h  GraphicsShaderVariant.cpp  GraphicsShaderVariant.h  KeywordMask.cpp  KeywordMask.h  PipelineManager.cpp  PipelineManager.h  Shader.cpp  Shader.h  ShaderAsset.cpp  ShaderAsset.h  ShaderContentLoader.cpp  ShaderContentLoader.h  ShaderHelper.cpp  ShaderHelper.h  ShaderInclude.cpp  ShaderInclude.h  ShaderLoader.cpp  ShaderLoader.h  ShaderManager.cpp  ShaderMeta.cpp  ShaderMeta.h  StringInclude.h  SubPass.cpp  SubPass.h  SubPassDesc.cpp  SubPassDesc.h  SubPassVariant.cpp  SubPassVariant.h
Engine/ShaderLab/: .gitignore  Antlr4Generate.bat  ShaderLab.g4  ShaderLabExample.shader
Engine/Singletion/: Singletion.hpp
Engine/TextureManager/: TextureManager.cpp  TextureManager.h
Engine/cmake/: EngineResources.cmake  EngineShaders.cmake
Ext/lua/: CMakeLists.txt  lua.c  version.md
(+252 files in other folders)
